﻿#2020.02.23
-Project Setup
#2020.02.24
-Implement Basic Rendering
#2020.02.29
-Refactor and remove obsolete code
#2020.03.03
-Implemented pre-made level loading
-Made test assets
-Added basic scrolling of level
#2020.03.06
-Changed rendering to isometric projection
#2020.03.09
-Spiresheet loading instead of single Sprites
-Level and screen logic separated
#2020.03.10
-Added basics of Entities
#2020.03.20
-Refactor and Minor Additions
-Center camera around the player
-Handling KeyBoard user input
#2020.03.22
-Minor changes to rendering for future player UI
-Tile system and collision detection for tiles
#2020.03.23
-Added animated sprites
#2020.03.29
-Refactor code
#2020.03.30
-Reworked rendering (progress 60%)
#2020.03.31
-Handling Mouse user input & Reworked rendering (progress 75%)
-Reworked rendering (progress 80%)
#2020.04.05
-Reworked rendering done 100%
-Render fixes and fixing collision detection
-Preparations for AI related stuff and more fixes for rendering
#2020.04.06
-Implement A* pathfinding algorithm
#2020.04.07
-Fixes to A* implementation and other small fixes
-Start implementing Projectiles and Particles and Spawners
#2020.04.12
-Implement Particles and related changes
-Projectiles 80%
#2020.04.13
-Small rework to Sprite and add new Sprite creation way
#2020.04.14
-Finish projectiles, particles, spawners. Note: some numerical adjustment required
-Implement basic sound system
#2020.04.20
-Procedural Generation 50%
#2020.04.21
-Procedural Generation 75% (Fixed filtering and added Sector generation)
#2020.04.25
-Major overhaul for sectors for better functionality
#2020.04.26
-Fix entity sorting, fix projectile and particle collision detection
-Fix wall transparency
-Implement Wall Tops
#2020.04.27
-Fix wall render order sorting & Rework Map Generation 25%